create in react

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&display=swap');
+
+:root{
+    --cream:hsl(30, 38%, 92%);
+    --dark-cyan:hsl(158, 36%, 37%);
+    --grayish-blue: hsl(228, 12%, 48%);
+    --dark-blue:hsl(212, 21%, 14%);
+    --active-cyan:hsl(158, 42%, 25%);
+}
+  
+.App{
+    background: var(--cream);
+    width:100%;
+    height:auto;
+    margin: auto;
+    font-family: 'Fraunces', serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-body{
+    width: 45%;
+    height: auto;
+    display: flex;
+    margin: auto;
+    background-color: #fff;
+    border-radius: 13px;
+    margin-top: 3rem;
+    color: var(--dark-blue);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.prod-img{
+    width: 100%;
+    background-image:url("../public/assets/images/image-product-desktop.jpg");
+    background-size:cover;
+    border-radius: 13px 0 0 13px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.prod-details{
+    width: 100%;
+    padding: 1rem 2rem;
+    font-size: 14px;
 }
 
-.App-link {
-  color: #61dafb;
+.type{
+    font-size: .7rem;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 4px;
+    color: var(--grayish-blue);
+    font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title{
+    font-weight: 700;
+    font-size: 2.8em;
+}
+
+.desc{
+    text-align:start;
+    color: var(--grayish-blue);
+    line-height: 19px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.price{
+    display: flex;
+}
+
+.discount{
+    font-size: 2em;
+    font-weight: 700;
+    color: var(--dark-cyan);
+    margin-right: 1rem;
+}
+
+.original-price{
+    text-decoration: line-through;
+    margin-top: 2.2rem;
+    color: var(--grayish-blue);
+    font-weight: 500;
+}
+
+.cart{
+    background-color: var(--dark-cyan);
+    border: none;
+    border-radius: 13px;
+    width: 100%;
+    padding: 1rem 1rem;
+    color: #fff;
+    font-size: 1rem;
+}
+
+.cart-icon{
+    margin-right: 2px;
+}
+
+.cart:hover{
+    background-color: var(--active-cyan);
+}
+
+@media only screen and (max-width: 450px) {
+    .card-body{
+        width: 95%;
+        display: flex;
+        margin-top: .8em;
+        color: var(--dark-blue);
+        flex-direction: column;
+        line-height: 32px;
+    }
+    
+    .prod-img{
+        width: 100%;
+        height: 15em;
+        background-image:url("../public/assets/images/image-product-mobile.jpg");
+        border-radius: 13px 13px 0 0;
+    }
+    
+    .prod-details{
+        padding: 1rem;
+    }
+    
+    .cart{
+        width: 90%;
+    }
 }
