--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
     font-family: 'Fraunces', serif;
 }
 
+.attribution{
+    text-align: center;
+    font-size: 13px;
+}
+
 .card-body{
     width: 45%;
     height: auto;
